resource/css/grid.css
/* Grid */
div.vh-grid,
#vvp-items-grid,
#tab-unavailable,
#tab-hidden {
	display: grid;
	border: 1px solid #ccc;
	grid-template-columns: repeat(auto-fill, minmax(236px, auto));
	padding: 1px;
}

#vvp-items-grid .vvp-item-tile,
#tab-unavailable .vvp-item-tile,
#tab-hidden .vvp-item-tile {
	margin-bottom: 0;
	margin-top: auto;
}

div.vh-grid .vvp-item-tile {
	border: 1px solid #ddd;
	margin-top: -1px;
	margin-left: -1px;
}
div.vh-grid .vvp-item-tile .vvp-item-tile-content {
	width: 210px;
	margin: 0 auto;
}

div.vh-grid .vvp-item-tile .vvp-item-tile-content > .vvp-item-product-title-container {
	height: 60px;
}

div.vh-grid .vvp-item-tile .vvp-item-tile-content > * {
	width: 100%;
	margin: 20px 0;
}

div.vh-grid .vvp-item-tile .vvp-item-tile-content > * {
	width: 100%;
	margin: 20px 0;
}

.vvp-item-tile {
	margin-bottom: 20px;
}

#vh-tabs .bookmark-highlight {
	border: 3px solid var(--item-highlight-border) !important;
	background-color: var(--item-highlight-background);
}

#vh-tabs .keyword-highlight {
	border: 3px solid var(--alert) !important;
}

#vvp-items-grid-container .vvp-item-tile a,
#vvp-items-grid-container .vvp-item-tile a:visited,
#vvp-items-grid-container .vvp-item-tile a:active {
	color: var(--item-link-light);
}

body.darktheme #vvp-items-grid-container .vvp-item-tile a,
body.darktheme #vvp-items-grid-container .vvp-item-tile a:visited,
body.darktheme #vvp-items-grid-container .vvp-item-tile a:active {
	color: var(--item-link-dark);
}

body.darktheme #vvp-items-grid-container div.bookmark-highlight a,
body.darktheme #vvp-items-grid-container div.bookmark-highlight a:visited,
body.darktheme #vvp-items-grid-container div.bookmark-highlight a:active,
body.darktheme #vvp-items-grid-container div.keyword-highlight a,
body.darktheme #vvp-items-grid-container div.keyword-highlight a:visited,
body.darktheme #vvp-items-grid-container div.keyword-highlight a:active {
	color: var(--item-link-light);
}

